# caspercontracts

./: .gitignore  Cargo.toml  LICENSE.txt  Makefile  README.md  package-lock.json  package.json
contract/demovcregistry/: Cargo.toml
contract/demovcregistry/src/: main.rs
contract/did/: Cargo.toml
contract/did/src/: main.rs
contract/ethereum/: DemoVCRegistry.sol  VCRegistry.sol
contract/src/: DemoVCRegistry.sol  VCRegistry.sol  did.sol  main.rs
contract/vcregistry/: Cargo.toml
js/: constants.js  createTransaction.js  deployContract.js  main.js  main2.js  readState.js
js/demovcregistry/: deploy_demovcregistry.js  read_demoVC.js  transact_fromAnotherAcc.js  transact_initialize.js  transact_issueDemoVC.js  transact_reActivateDemoVC.js  transact_reActivateVC.js  transact_registerVPResponse.js  transact_revokeVC.js  transact_sendVPRequest.js  transact_setSchema.js
js/did/: createTransaction.js  deployDid.js  deploy_did.js  readState.js  read_did.js  transact_addDelegate.js  transact_asd.js  transact_changeOwner.js  transact_revokeAttribute.js  transact_revokeDelegate.js  transact_setAttribute.js
js/vcregistry/: deployVсregistry.js  deploy_vсregistry.js  readVC.js  read_vcregistry.js  transact_issueVC.js  transact_reActivateVC.js  transact_revokeVC.js
network_keys/deployer/: public_key.pem  public_key_hex  public_key_hex.txt  secret_key.pem
network_keys/did_deployer/: public_key.pem  public_key_hex  secret_key.pem
network_keys/ippolit/: IppolitWallet_public_key.pem  secret_key.pem
network_keys/peggy/: public_key.pem  public_key_hex
tests/: Cargo.toml
(+20 files in other folders)
